--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "obsidian-autoscroll",
-	"name": "Autoscroll",
+	"id": "obsidian-autoscroll-extended",
+	"name": "Autoscroll Extended",
 	"version": "0.1.3",
 	"minAppVersion": "0.15.0",
 	"description": "Automatically scroll content with the provided speed",
