--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "obsidian-autoscroll",
+	"name": "obsidian-autoscroll-extended",
 	"version": "0.1.3",
 	"description": "This plugin allows you to automatically scroll down the content with the provided speed",
 	"main": "main.js",
